# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  6 May 2002; Martin Schlemmer <azarah@gentoo.org>:

    Fixed /sbin/rc-envupdate.sh to only use the $KDEDIR of the highest
	/etc/env.d/ file.  Same for $QTDIR.

  5 May 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add /etc/DIR_COLORS as it is no longer shipped with fileutils,
    and is needed for some fixes.

  28 April 2002; Martin Schlemmer <azarah@gentoo.org>:

    Update /etc/rc.conf to be more clear and state that you should
	remove consolefont from startup if you do not use it.  Should
	resolve bug #2174.

  26 April 2002; Donny Davies <woodchip@gentoo.org> passwd, group :

    Added user/group apache with uid/gid 81.

  25 April 2002; Martin Schlemmer <azarah@gentoo.org>:
  
    Remove the "-net" from the line setting the default gateway
	in /etc/init.d/net.eth0.  Thanks to Peter W. Michaleas for
	noting this.

  24 April 2002; Donny Davies <woodchip@gentoo.org> rc.conf :

    Remove NFSSERVER from rc.conf since it's now covered in /etc/conf.d/nfs
    which is installed with the nfs-utils package.  Also tidied up some
    really old, leftover junk like the non-supported stuff from rc5.
    Closes #1754.

  23 April 2002; Martin Schlemmer <azarah@gentoo.org>:

    Remove creation of /var/run/utmpx from bootmisc again.  Seems
    other people have wierd problems.

* rc-scripts 1.3.4 (21 April 2002)

  21 April 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add /sbin/rc-envupdate.sh to speedup updating of /etc/profile.env,
	and /etc/csh.env.  Update /etc/init.d/bootmisc to use this.

	Implement the status commandline argument.  Updated /sbin/runscript.sh
	and /sbin/rc-help.sh for this.

	Fix /sbin/depscan.sh to honour NEED and USE overriding BEFORE
	and AFTER.

  12 April 2002; Martin Schlemmer <azarah@gentoo.org>:
