@@ -28,6 +28,12 @@ UNREGISTER      .*           RMNEWCOMPAT
 # autoloading
 LOOKUP          .*           MODLOAD
 
+# Uncomment the following if you want to set the group to "tty" for the
+# pseudo-tty devices. This is necessary so that mesg(1) can later be used to
+# enable/disable talk requests and wall(1) messages.
+REGISTER        ^pty/s.*     PERMISSIONS -1.tty  0600
+REGISTER        ^pts/.*      PERMISSIONS -1.tty  0600
+
 # Uncomment this if you want permissions to be saved and restored
 # NB: Do NOT change the following!
 # Do not do this for pseudo-terminal devices
@@ -48,9 +54,9 @@ RESTORE         /lib/dev-state
 # Comment/change these if you want to change the permissions on
 # the audio devices
 LOOKUP          snd          MODLOAD ACTION snd
-LOOKUP		dsp	     MODLOAD
-LOOKUP		mixer	     MODLOAD
-LOOKUP		midi	     MODLOAD
+LOOKUP          dsp          MODLOAD
+LOOKUP          mixer        MODLOAD
+LOOKUP          midi         MODLOAD
 REGISTER        sound/.*     PERMISSIONS root.audio 660
 REGISTER        snd/.*       PERMISSIONS root.audio 660
 
@@ -66,26 +72,32 @@ REGISTER        snd/.*       PERMISSIONS root.audio 660
 #    devfsd
 
 # Create /dev/cdrom for the first cdrom drive
-LOOKUP      ^cdrom$          CFUNCTION GLOBAL mksymlink cdroms/cdrom0 cdrom
-REGISTER    ^cdrom/cdrom0$   CFUNCTION GLOBAL mksymlink $devname cdrom
-UNREGISTER  ^cdrom/cdrom0$   CFUNCTION GLOBAL unlink cdrom
+LOOKUP          ^cdrom$          CFUNCTION GLOBAL mksymlink cdroms/cdrom0 cdrom
+REGISTER        ^cdrom/cdrom0$   CFUNCTION GLOBAL mksymlink $devname cdrom
+UNREGISTER      ^cdrom/cdrom0$   CFUNCTION GLOBAL unlink cdrom
 
 
 # Create /dev/dvd for the second cdrom drive
 # (change 'cdroms/cdrom1' to suite your setup)
-#LOOKUP      ^dvd$           CFUNCTION GLOBAL mksymlink cdroms/cdrom1 dvd
-#REGISTER    ^cdrom/cdrom1$  CFUNCTION GLOBAL mksymlink $devname dvd
-#UNREGISTER  ^cdrom/cdrom1$  CFUNCTION GLOBAL unlink dvd
+#LOOKUP          ^dvd$           CFUNCTION GLOBAL mksymlink cdroms/cdrom1 dvd
+#REGISTER        ^cdrom/cdrom1$  CFUNCTION GLOBAL mksymlink $devname dvd
+#UNREGISTER      ^cdrom/cdrom1$  CFUNCTION GLOBAL unlink dvd
 
 # Create /dev/cdrw for the first cdrom on the scsi bus
 # (change 'sr0' to suite your setup)
-#LOOKUP      ^cdrw$           CFUNCTION GLOBAL mksymlink sr0 cdrw
-#REGISTER    ^sr0$           CFUNCTION GLOBAL mksymlink $devname cdrw
-#UNREGISTER  ^sr0$           CFUNCTION GLOBAL unlink cdrw
+#LOOKUP          ^cdrw$          CFUNCTION GLOBAL mksymlink sr0 cdrw
+#REGISTER        ^sr0$           CFUNCTION GLOBAL mksymlink $devname cdrw
+#UNREGISTER      ^sr0$           CFUNCTION GLOBAL unlink cdrw
 
 # Create /dev/mouse
-LOOKUP      ^mouse$          CFUNCTION GLOBAL mksymlink misc/psaux mouse
-REGISTER    ^misc/psaux$     CFUNCTION GLOBAL mksymlink $devname mouse
-UNREGISTER  ^misc/psaux$     CFUNCTION GLOBAL unlink mouse
+LOOKUP          ^mouse$          CFUNCTION GLOBAL mksymlink misc/psaux mouse
+REGISTER        ^misc/psaux$     CFUNCTION GLOBAL mksymlink $devname mouse
+UNREGISTER      ^misc/psaux$     CFUNCTION GLOBAL unlink mouse
+
+# Manage USB mouse
+REGISTER        ^input/mouse0$   CFUNCTION GLOBAL mksymlink $devname usbmouse
+UNREGISTER      ^input/mouse0$   CFUNCTION GLOBAL unlink usbmouse
+REGISTER        ^input/mice$     CFUNCTION GLOBAL mksymlink $devname usbmouse
+UNREGISTER      ^input/mice$     CFUNCTION GLOBAL unlink usbmouse
 
 # devfsd.conf ends here
