@@ -16,7 +16,6 @@ postmaster:x:14:12:postmaster:/var/spool/mail:/bin/bash
 cron:x:16:16:cron:/var/cron:/bin/bash
 ftp:x:21:21::/home/ftp:/bin/bash
 at:x:25:25:at:/var/cron/atjobs:/bin/bash
-www:x:30:65534::/tmp:/bin/bash
 squid:x:31:31:Squid:/var/cache/squid:/bin/bash
 gdm:x:32:32:GDM:/var/lib/gdm:/bin/bash
 xfs:x:33:33:X Font Server:/etc/X11/fs:/bin/false
